test/errors/mismatched_paren.sg
' Test mismatched parentheses
(def test (foo bar]